# LMC

./: .gitignore  CMakeLists.txt  README.md
include/: aboutwindow.h  abstractio.h  editorwindow.h  lmc.h  lmcHighlighter.h  mainwindow.h  settingswindow.h  utils.h
programs/: add.txt  ascii.lmc  ascii_table.lmc  sub.lmc  sub.txt
res/favicon/: favicon.rc
src/: aboutwindow.cpp  consoleio.cpp  editorwindow.cpp  lmc.cpp  lmcHighlighter.cpp  main.cpp  mainwindow.cpp  settingswindow.cpp  utils.cpp
